# iHearYou

./: .gitignore  README.md
android-receiver/: build.gradle  settings.gradle
android-receiver/app/: build.gradle
android-receiver/app/src/main/: AndroidManifest.xml
android-receiver/app/src/main/cpp/: CMakeLists.txt  audioshare_bridge.cpp
android-receiver/app/src/main/java/com/audioshare/core/audio/: AudioPipeline.kt  DecodeThread.kt
android-receiver/app/src/main/java/com/audioshare/core/buffer/: JitterBuffer.kt  PcmRingBuffer.kt
android-receiver/app/src/main/java/com/audioshare/core/control/: AdaptiveReflex.kt  CodecPolicy.kt
android-receiver/app/src/main/java/com/audioshare/core/network/: UdpReceiver.kt
android-receiver/app/src/main/java/com/audioshare/core/service/: AudioForegroundService.kt
android-receiver/app/src/main/java/com/audioshare/ui/: MainActivity.kt
android-receiver/app/src/main/res/layout/: activity_main.xml
docs/: protocol.md
pc-sender/: Cargo.toml
pc-sender/src/: app.rs  audio.rs  encoder.rs  main.rs  sender.rs
